# FrogPump

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: default.toml  networks.toml
docs/: ARCHITECTURE.md  COMMANDS.md
scripts/: build.sh  install.sh
src/: lib.rs  main.rs
src/api/: client.rs  endpoints.rs  mod.rs  response.rs  types.rs
src/cli/: app.rs  mod.rs  output.rs  parser.rs
src/commands/: claim.rs  config_cmd.rs  launch.rs  leaderboard.rs  mod.rs  stats.rs  status.rs  tokens.rs  wallet.rs
src/config/: mod.rs  network.rs  settings.rs
src/core/: engine.rs  fee_collector.rs  mod.rs  token.rs  validator.rs
src/models/: agent.rs  earning.rs  mod.rs  token.rs
src/solana/: connection.rs  keypair.rs  mod.rs  transaction.rs  wallet.rs
src/utils/: crypto.rs  display.rs  error.rs  logger.rs  mod.rs
tests/common/: mod.rs
tests/integration/: config_test.rs  launch_test.rs  wallet_test.rs
