[package]
name = "frogpump"
version = "0.2.0"
edition = "2021"
authors = ["frogpump-core"]
description = "Gasless token launchpad CLI for AI agents on Solana"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
tabled = "0.16"
env_logger = "0.11"
log = "0.4"
