[package]
name = "frogpump"
version = "0.3.0"
edition = "2021"
authors = ["frogpump-core"]
description = "Gasless token launchpad CLI for AI agents on Solana"
license = "MIT"
repository = "https://github.com/frogpump-core/FrogPump"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
tabled = "0.16"
env_logger = "0.11"
log = "0.4"
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "frogpump"
path = "src/main.rs"
